configurando geração da imagem disponibilização de container

--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -21,3 +21,5 @@ security:
     key-store-password: spcbrasil
     key-pair-alias: spcbrasil.org.br
     key-pair-password: spcbrasil
+docker:
+  registry: yure.teste.com
