--- a/pom.xml
+++ b/pom.xml
@@ -53,6 +53,23 @@
         </dependency>
 
         <dependency>
+            <groupId>org.springframework.boot</groupId>
+            <artifactId>spring-boot-starter-data-jpa</artifactId>
+        </dependency>
+
+        <dependency>
+            <groupId>org.spcbrasil</groupId>
+            <artifactId>SpcJava-Core</artifactId>
+            <version>4.0</version>
+        </dependency>
+
+        <dependency>
+            <groupId>jdbc.oracle</groupId>
+            <artifactId>ojdbc7</artifactId>
+            <version>12.1.0.2</version>
+        </dependency>
+
+        <dependency>
             <groupId>org.projectlombok</groupId>
             <artifactId>lombok</artifactId>
             <optional>true</optional>
