--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -3,7 +3,13 @@ spring:
     url: jdbc:h2:mem:testdb
     driverClassName: org.h2.Driver
     username: sa
-    password: 
+    password:
+    hikari:
+      connection-timeout: 30000
+      minimum-idle: 5
+      maximum-pool-size: 12
+      idle-timeout: 300000
+      max-lifetime: 1200000
   jpa:
     database-platform: org.hibernate.dialect.H2Dialect
   h2:
@@ -23,3 +29,21 @@ security:
     key-pair-password: spcbrasil
 docker:
   registry: yure.teste.com
+
+datasource:
+    oracle:
+      connectionFactoryClassName: oracle.jdbc.pool.OracleDataSource
+      keyfile: C:/dev/store/key/spcjava.cer
+      passwordfile: C:/dev/store/key/cadpos-usr-db-pwd-HOMOLOG.key
+      connectionpoolname: cadpos-datasource-pool
+      minPoolSize: 1
+      maxPoolSize: 30
+      jdbcUrl: jdbc:oracle:thin:@//sp-hmdb-scan.spcdc.br:1521/SPCHMSP
+      jdbcUser: usr_cadpos
+      message: teste
+      hibernateShowSQL: false
+
+hibernate:
+  hbm2ddl:
+    auto: validate
+  show-sql: true
