adicionando driver para quardar configuracao do auth2 jdbc

--- a/src/main/resources/application-local-dev.yml
+++ b/src/main/resources/application-local-dev.yml
@@ -1,9 +1,14 @@
+app: 
+  auth: 
+    driver: h2
+  module: 
+    h2: 
+      enabled: true
+    oracle:
+      enabled: false
+          
 spring:
   datasource:
-    url: jdbc:h2:mem:testdb
-    driverClassName: org.h2.Driver
-    username: sa
-    password:
     hikari:
       connection-timeout: 30000
       minimum-idle: 5
