--- a/src/main/resources/application-dev.yml
+++ b/src/main/resources/application-dev.yml
@@ -1,11 +1,3 @@
-app: 
-  store: C:/dev/store
-  auth: 
-    driver: oracle
-  module: 
-    oracle: 
-      enabled: true
-      
 spring:
   datasource:  
     hikari:
@@ -22,17 +14,16 @@ security:
     key-store-password: spcbrasil
     key-pair-alias: spcbrasil.org.br
     key-pair-password: spcbrasil
-
 datasource:
     oracle:
       connectionFactoryClassName: oracle.jdbc.pool.OracleDataSource
       keyfile: ${app.store}/key/spcjava.cer
-      passwordfile:  ${app.store}/key/cadpos-usr-db-pwd-HOMOLOG.key
+      passwordfile: ${app.store}/key/usrjava-db-pwd-DEV.key
       connectionpoolname: cadpos-datasource-pool
       minPoolSize: 1
       maxPoolSize: 30
-      jdbcUrl: jdbc:oracle:thin:@//sp-hmdb-scan.spcdc.br:1521/SPCHMSP
-      jdbcUser: usr_cadpos
+      jdbcUrl: jdbc:oracle:thin:@//db-dev.spcdc.br:1521/SPCDESSP
+      jdbcUser: usrjava
       hibernateShowSQL: false
 
 hibernate:
