--- a/pom.xml
+++ b/pom.xml
@@ -23,7 +23,6 @@
 		<maven-jar-plugin.version>3.1.1</maven-jar-plugin.version>
 		<docker.image.name>artifactory.spcdc.org.br/cadpos/${project.artifactId}
 		</docker.image.name>
-		<docker.image.tag>latest</docker.image.tag>
 	</properties>
 
 	<dependencies>
@@ -101,6 +100,13 @@
 			<version>1.4.2.Final</version>
 		</dependency>
 
+		<dependency>
+			<groupId>junit</groupId>
+			<artifactId>junit</artifactId>
+			<version>4.12</version>
+			<scope>test</scope>
+		</dependency>
+
 	</dependencies>
 
 	<build>
@@ -171,6 +177,31 @@
 							<version>1.3.1.Final</version>
 						</path>
 					</annotationProcessorPaths>
+				</configuration>
+			</plugin>
+			<plugin>
+				<groupId>org.flywaydb</groupId>
+				<artifactId>flyway-maven-plugin</artifactId>
+				<version>4.2.0</version>
+				<configuration>
+					<url>jdbc:oracle:thin:@localhost:1521:XE</url>
+					<driver>oracle.jdbc.driver.OracleDriver</driver>
+					<user>system</user>
+					<password>oracle</password>
+					<schemas>
+						<schema>AUTH</schema>
+					</schemas>
+					<locations>
+						<location>filesystem:db/migrations</location>
+						<location>filesystem:db/callbacks</location>
+					</locations>
+					<encoding>UTF-8</encoding>
+					<sqlMigrationSuffixes>
+						<sqlMigrationSuffix>.sql</sqlMigrationSuffix>
+						<sqlMigrationSuffix>.pkg</sqlMigrationSuffix>
+					</sqlMigrationSuffixes>
+					<placeholderReplacement>true</placeholderReplacement>
+					<cleanDisabled>false</cleanDisabled>
 				</configuration>
 			</plugin>
 		</plugins>
