--- a/src/main/resources/jdbc-local.properties
+++ b/src/main/resources/jdbc-local.properties
@@ -1,7 +1,8 @@
 env.name=local
-env.description=Banco de dados de TEST rodando na maquina local ou via VM (Oracle XE 11g)
+env.description=Banco de dados de TEST rodando na maquina local ou via VM (Oracle XE 11g Docker)
 
 jdbc.driverclass=oracle.jdbc.driver.OracleDriver
 jdbc.url=jdbc:oracle:thin:@localhost:1521:XE
+jdbc.schema=AUTH
 jdbc.username=system
 jdbc.password=oracle
